<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">联系人</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
	<string name="dial">拨号</string>
	<string name="calllog">通话记录</string>
	<string name="contacts">联系人</string>
	<string name="dial_describtion">拨号键</string>
	<string name="incall_tag">来去电标识</string>
	<string name="unsave">未保存</string> 
	<string name="ditail_arrow">转到联系人详情</string>
	<string name="delete">删除</string>
	<string name="add">添加</string>
	<string name="head_view_des">联系人头像</string>
	<string name="des_make_call">打电话</string>
	<string name="des_send_sms">发信息</string>
	<string name="detail_contact">联系人详情</string>
	<string name="edit_contact">编辑联系人</string>
	<string name="edit">编辑</string>
	<string name="just_now">刚刚</string>
	<string name="mins_ago">%1$s分钟前</string>
	<string name="hours_ago">%1$s小时前</string>
	<string name="year">%1$s年</string>
	<string name="mouth">%1$s月</string>
	<string name="day">%1$s日</string>
	<string name="hour">%1$s小时</string>
	<string name="min">%1$s分</string>
	<string name="sec">%1$s秒</string>
	<string name="phone">电话</string>
	<string name="email">邮件</string>
	<string name="add_contact">添&#160;&#160;&#160;&#160;加&#160;&#160;&#160;&#160;联&#160;&#160;&#160;&#160;系&#160;&#160;&#160;&#160;人</string>
	<string name="outcall">拨出</string>
	<string name="incall">来电</string>
	<string name="misscall">未接</string>
	<string name="noanswer">未接通</string>
	<string name="calllog_detail">通话详情</string>
	<string name="home">家庭</string>
	<string name="work">工作</string>
	<string name="mobile">手机</string>
	<string name="name">姓名</string>
	<string name="save">保存</string>
	<string name="add_suc">添加成功</string>
	<string name="edit_suc">修改成功</string>
	
	
	<string-array name="types">
	    <item>手机</item>
	    <item>家庭</item>
	    <item>工作</item>
	</string-array>
</resources>
