<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/head_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/headview"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:src="@drawable/avatar_default_48h" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/call_logs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tel_head_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="#C0C0C0"
                android:textSize="24sp" />

             <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" /> 

            <RelativeLayout
                android:id="@+id/detail_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/tel_opera"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/call"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/des_make_call"
                        android:src="@drawable/icon_dial_call" />

                    <ImageView
                        android:id="@+id/sms"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:contentDescription="@string/des_send_sms"
                        android:src="@drawable/icon_dial_msm" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/add_to_contact"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_add_contact_bg"
            android:text="@string/add_contact"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>