<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:id="@+id/head_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView 
            android:id="@+id/headView"
            android:layout_width="64dp"
            android:layout_height="64dp" 
            android:layout_margin="10dp"
            android:src="@drawable/avatar_default_48h"
            />
        <FrameLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            >
         <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:inputType="text"
            android:textSize="14sp"
            android:hint="@string/name"
            /> 
            </FrameLayout>
    </LinearLayout>

    
        <LinearLayout 
            android:id="@+id/tel_head_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            >
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="24sp"
                android:textColor="#C0C0C0"
                />
            <ImageView 
                android:id="@+id/add_phone"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="10dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/add_phone"
                />
            </RelativeLayout>
            <View 
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gravy"
                />
            <LinearLayout
                android:id="@+id/tels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                </LinearLayout>
        </LinearLayout>
        
        
        <LinearLayout 
            android:id="@+id/email_head_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="24sp"
                android:textColor="#C0C0C0"
                />
            
            
            <View 
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gravy"
                />
            <LinearLayout
                android:id="@+id/emails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >
         		<EditText 
         		    android:id="@+id/email_content"
         		    android:layout_width="match_parent"
         		    android:layout_height="wrap_content"
         		    android:textSize="14sp"
         		    android:inputType="text"
         		    android:layout_marginLeft="15dp"
         		    android:layout_marginRight="15dp"
         		    android:hint="@string/email"
         		    />
                </LinearLayout>
        </LinearLayout>
    
    
</LinearLayout>
